# from_scratch_neural_network

./: README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_titanic_fast.ipynb  demo.ipynb
src/final_project/: cli.py
src/final_project/data/: mnist  titanic.py
src/final_project/eval/: metrics.py
src/final_project/models/: nn_scratch.py
tests/: compare_torch  compare_torch.py  test_grad_check.py  test_softmax_loss.py
