[build-system]
requires = ["setuptools>=69","wheel"]

[project]
name = "final-project"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "tqdm>=4.66"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra --strict-markers"
